[gd_scene load_steps=3 format=3 uid="uid://dhdxdgtknt61q"]

[ext_resource type="Script" path="res://Multiplayer_Test.gd" id="1_y4w2h"]
[ext_resource type="PackedScene" uid="uid://ik81h2ecd2a0" path="res://basic_player.tscn" id="2_u8xdv"]

[node name="Multiplayer_Test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4w2h")
player_scene = ExtResource("2_u8xdv")

[node name="Host" type="Button" parent="."]
offset_left = 120.0
offset_top = 160.0
offset_right = 315.0
offset_bottom = 205.0
text = "Host
"

[node name="Join" type="Button" parent="."]
offset_left = 340.0
offset_top = 160.0
offset_right = 535.0
offset_bottom = 205.0
text = "Join
"

[node name="TextEdit" type="LineEdit" parent="."]
offset_left = 120.0
offset_top = 83.0
offset_right = 536.0
offset_bottom = 128.0
placeholder_text = "your name here"
alignment = 1

[node name="StartGame" type="Button" parent="."]
offset_left = 219.0
offset_top = 541.0
offset_right = 465.0
offset_bottom = 626.0
text = "Start Game"

[node name="Header" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(300, 25)
offset_left = 150.0
offset_top = 250.0
offset_right = 450.0
offset_bottom = 275.0
bbcode_enabled = true
text = "[b]Current Players:[/b]"

[node name="PlayerList" type="ScrollContainer" parent="."]
offset_left = 150.0
offset_top = 275.0
offset_right = 450.0
offset_bottom = 515.0

[node name="VBoxContainer" type="VBoxContainer" parent="PlayerList"]
layout_mode = 2

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
